[project]
name = "half-cheetah-local-sac-test"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gymnasium[mujoco]>=1.0.0",
    "imageio[ffmpeg]>=2.34.0",
    "stable-baselines3>=2.3.2",
    "torch==2.7.1+cu118",
]

[project.scripts]
cheetah-checks = "sac_cheetah.checks:main"
cheetah-train = "sac_cheetah.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sac_cheetah"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
